--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/mattorth/node-db-challenge#readme",
   "dependencies": {
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
     "knex": "^0.20.9",
+    "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.1.1"
   }
 }
