--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "## Description",
   "main": "index.js",
   "scripts": {
+    "server": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +23,7 @@
     "helmet": "^3.21.2",
     "knex": "^0.20.9",
     "knex-cleaner": "^1.3.0",
+    "nodemon": "^2.0.2",
     "sqlite3": "^4.1.1"
   }
 }
